# stm_lvgl

./: .cproject  .mxproject  .project  CMakeLists.txt  README.md  STM32F413.ld  STM32F413VGTX_FLASH.ld  STM32F413VGTX_RAM.ld  lv_conf.h  lv_conf_internal.h  new_lvgl.ioc
Core/: CMakeLists.txt
Core/Inc/: ST7789S.h  ST7789S_driver.h  main.h  stm32f4xx_hal_conf.h
Core/Src/: ST7789S.c  ST7789S_driver.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
cmake/: stm32f4xx.cmake
